<resources>
    <string name="app_name">FirstASApp</string>
    <string name="title1">Learn the best way to program! Soar as eagles and pursue with a purpose!</string>
    <string name="title2">Through the use of continue; and break; you can really excel as eagles!</string>
    <string name="next">Next</string>
    <string name="back">Back</string>
    <string name="learn">Learn More</string>
    <string name="eagle">Valley View Eagle Logo</string>
    <string name="learning2">The use of continue; in java is also very important and has no known negative side effects!</string>
    <string name="learning">The use of break; in java is widely used and smiled upon due to how helpful and efficient it can be! </string>
</resources>