<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5sp"
        android:textSize="32sp"
        android:text="@string/title1" />

    <ImageView
        android:contentDescription="@string/eagle"
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="172dp"
        android:layout_marginBottom="1dp"
        app:srcCompat="@drawable/valleyviewhighlogo" />

    <Button
        android:id="@+id/nxtButton"
        android:layout_width="412dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:backgroundTint="@color/black"
        android:text="@string/learn" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12sp"
        android:textSize="32sp"
        android:text="@string/title2" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="match_parent"
        android:layout_height="298dp"
        android:contentDescription="@string/eagle"
        app:srcCompat="@drawable/vvhsfrontb" />
</LinearLayout>